--- a/about.html
+++ b/about.html
@@ -112,10 +112,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<p class="para">
-				I am a New Zealand born programmer and designer with a Bachelor's in Creative Technologies from Auckland University of Technology. Currently, I work as a contract Unreal Generalist  and Software Developer at <a class="in-text" href="https://www.karaeducation.co.nz/" target="_blank">Kara Technologies</a>. I have a passion for exploring game engines and finding technological solutions for the disabled.
-				  
+				I am a New Zealand born developer with a passion for using game engines and using technology to assist with education and accessibility. 
+				My speciality is being able to communicate between different specialists. I am a strong believer in pacing oneself to get the most out of your week, to avoid mental and physical burnouts. 
 				<br/> <br/>
-				Outside of work, I am a Martial Arts enthusiast that actively trains Muay Thai.  
+				Outside of work, I train Muay Thai and am passionate about Martial Arts.  
 				</p>   
 				<div class="clearfix"> </div>
 			</div>
