--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="portfolio" name="portfolio" class="portfolio">
         <div class="container">
             <h3>Portfolio</h3>
-            <p class="vel">Hi, I'm Sujay, a Games, Mixed Reality & App Developer. I currently work at <a class="in-text" href="https://www.kara.tech/" target="_blank">Kara Technologies</a> on a Digital Human that assists in Deaf education. Here is a collection of projects that I am proud of:
+            <p class="vel">Hi, I'm Sujay, a Games, Mixed Reality & App Developer. I currently work at <a class="in-text" href="https://www.joybusinessacademy.com/" target="_blank">Joy Business Academy</a> as a Game Developer. Here is a collection of projects that I am proud of:
             </p>
 
             <div class="sap_tabs">
