LinkedIn replaces resume

--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="services-grids">
                 <div class="col-md-6 services-grid-left">
                     <div class="col-xs-4 services-grid-left1">
-                        <a href="https://drive.google.com/file/d/1GNmZfDvAHFyAcAKnwLmCPlPEEQ9pZrXC/view?usp=sharing" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></i>
+                        <a href="https://www.linkedin.com/in/thesujaychand/" target="_blank">
+                            <i class="hovicon effect-2 sub-a"><span class="fab fa-linkedin" aria-hidden="true"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
-                        <h4>Resume</h4>
+                        <h4>linkedIn</h4>
                         <p></p>
                     </div>
                     <div class="clearfix"> </div>
