Updated to use shipped products

--- a/SuperWarlocks/SuperWarlocks.html
+++ b/SuperWarlocks/SuperWarlocks.html
@@ -78,8 +78,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="https://www.linkedin.com/pub/sujay-chand/100/337/199" target="_blank" class="linkedIn"> </a></li>
 						<li><a href="https://www.youtube.com/channel/UCmTvgvHLIP_yhuN0xDLqK3w" target="_blank" class="youtube"> </a></li>
 						<li><a href="https://github.com/sujaygchand" target="_blank" class="github"> </a></li>
-						<li><a href="https://www.instagram.com/thesujaychand/" target="_blank" class="instagram"> </a></li>
-						<li><a href="https://twitter.com/TheSujayChand" target="_blank" class="twitter"> </a></li>
 					</ul>
 				</div>
 				<div class="header-bottom-right1">
@@ -141,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 
 					<div class="footer-top-grid1">
-						<h3>Skills I Used:</h3>
+						<h3>Skills & Tools Used:</h3>
 						<ul class="tag2">
 							<li><a>Unreal Engine 4</a></li>
 							<li><a>Game Design</a></li>
@@ -171,8 +169,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <li><a href="https://www.linkedin.com/pub/sujay-chand/100/337/199" target="_blank" class="linkedIn"> </a></li>
 						<li><a href="https://www.youtube.com/channel/UCmTvgvHLIP_yhuN0xDLqK3w" target="_blank" class="youtube"> </a></li>
 						<li><a href="https://github.com/sujaygchand" target="_blank" class="github"> </a></li>
-						<li><a href="https://www.instagram.com/thesujaychand/" target="_blank" class="instagram"> </a></li>
-						<li><a href="https://twitter.com/TheSujayChand" target="_blank" class="twitter"> </a></li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
