About me updates

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="about-grids">
 				
 				<div class="col-md-6 about-grid">
-					<img src="images/Sujay%20About%20Pic.jpg" width="465" height="400" />
+					<img src="images/Sujay-MilfordSoundsTrack2020.jpg" width="360.6" height="480" />
 					<div class="about-grid-sujay">
 						<div class="sujay">
 						</div>
@@ -110,10 +110,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<p class="para">
-				I am a New Zealand born developer with a passion for using game engines and using technology to assist with education and accessibility. 
+				I am a New Zealand born programmer that feels a sense of purpose for creating game components on a framework level, that others can utilise or inherit from to create their own specific systems.
+				My goal is to reduce reduce workloads and stopped potential crunch. Additionally, I have a passion for making gameplay systems and enjoy the development process.
+				<br/> <br/>
 				My speciality is being able to communicate between different specialists. I am a strong believer in pacing oneself to get the most out of your week, to avoid mental and physical burnouts. 
 				<br/> <br/>
-				Outside of work, I train Muay Thai and am passionate about Martial Arts.  
+				Outside of work, I enjoy training Mixed Martial Artist.  
 				</p>   
 				<div class="clearfix"> </div>
 			</div>
