--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="sap_tabs">
                 <div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
                     <ul class="resp-tabs-list">
-                       <li class="resp-tab-item"><span>Shipped Producted</span></li>
+                       <li class="resp-tab-item"><span>Shipped Products</span></li>
                         <li class="resp-tab-item"><span>All</span></li>
                         <li class="resp-tab-item"><span>Unreal </span></li>
                         <li class="resp-tab-item"><span>Unity</span></li>
