--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				I am a New Zealand born programmer that feels a sense of purpose for creating game components on a framework level, that others can utilise or inherit from to create their own specific systems.
 				My goal is to reduce reduce workloads and stopped potential crunch. Additionally, I have a passion for making gameplay systems and enjoy the development process.
 				<br/> <br/>
-				My speciality is being able to communicate between different specialists. I am a strong believer in pacing oneself to get the most out of your week, to avoid mental and physical burnouts. 
+				My specialty is being able to communicate between different specialists. I am a strong believer in pacing oneself to get the most out of your week, to avoid mental and physical burnouts. 
 				<br/> <br/>
 				Outside of work, I enjoy training Mixed Martial Artist.  
 				</p>   
