--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
-                            <p>C#, C++ & Java</p>
+                            <p>C#, C++, Blueprint, Java & Arduino</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -447,7 +447,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
-                            <p>HTML5 & CSS3</p>
+                            <p>HTML5, React.js & CSS3</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
