Removed instagram link

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                         <img src="JBA/SFI-Earth Moving Cover Landscape.png" />
                                                         <div class="mask"></div>
                                                         <div class="content">
-                                                            <span class="info" title="Full Image">SKILLS FOR INDUSTRY:</br> EARTH MOVING</span>
+                                                            <span class="info" title="Full Image">SKILLS FOR INDUSTRY: EARTH MOVING</span>
                                                         </div>
                                                     </div>
                                                 </a>
