Removing game dev focus

--- a/about.html
+++ b/about.html
@@ -92,6 +92,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //header-bottom -->
 <!-- banner -->
 	<div class="banner1">
+			<div class="container">
+					<section class="slider">
+						<div class="flexslider">
+							<ul class="slides">
+								<li>
+									<div class="banner-info">
+										<h1>Software Developer</h1>
+									</div>
+								</li>
+		
+							</ul>
+						</div>
+					</section>
+				</div>
 	</div>
 <!-- //banner -->
 <!-- about -->
@@ -110,12 +124,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<p class="para">
-				I am a New Zealand born programmer that feels a sense of purpose for creating game components on a framework level, that others can utilise or inherit from to create their own specific systems.
-				My goal is to reduce workloads and stopped potential crunch. Additionally, I have a passion for making gameplay systems and enjoy the development process.
+				I am a New Zealand born programmer that feels a sense of purpose for making processes easier for clients and reducing developer workload. I have over 2 years of professional programming experience, with most of time spent within the video game industry.
 				<br/> <br/>
-				My specialty is being able to communicate between different specialists. I am a strong believer in pacing oneself to get the most out of your week, to avoid mental and physical burnouts. 
+				My specialty is being able to communicate between different specialists. I am a strong believer in pacing oneself to get the most out of your week, to avoid mental and physical burnouts.
 				<br/> <br/>
-				Outside of work, I enjoy training Mixed Martial Artist.  
+				Outside of work, I enjoy training Muay Thai.   
 				</p>   
 				<div class="clearfix"> </div>
 			</div>
