--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <ul class="slides">
                         <li>
                             <div class="banner-info">
-                                <h1>Game and Tooling Developer</h1>
+                                <h1>Software Developer</h1>
                             </div>
                         </li>
 
@@ -155,9 +155,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="portfolio" name="portfolio" class="portfolio">
         <div class="container">
             <h3>Portfolio</h3>
-            <p class="vel">Hi I'm Sujay, I enjoy creating gameplay systems and game development tools to reduce potential crunch. Here is a collection of projects that I am proud of:
-            </p>
-
             <div class="sap_tabs">
                 <div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
                     <ul class="resp-tabs-list">
@@ -486,7 +483,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
-                            <p>C#, C++, Blueprint, Java & Arduino</p>
+                            <p>C#, C++, Java, HTML, CSS & Arduino</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -518,8 +515,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <i class="hovicon effect-2 sub-a feat"><span class="fab fa-html5" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
-                            <h4>Web Development</h4>
-                            <p>HTML5, React.js & CSS3</p>
+                            <h4>Frameworks</h4>
+                            <p>.NET Core, ASP.NET Core & React</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
