Removed react from cv

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Frameworks</h4>
-                            <p>.NET Core, ASP.NET Core & React</p>
+                            <p>.NET Core & ASP.NET Core</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
