--- a/ReadyOrNot/ReadyOrNot.html
+++ b/ReadyOrNot/ReadyOrNot.html
@@ -124,7 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul>
 			<li><p>Worked towards producing a functional PVE experience for the Hotel map</p></li>
 			<li><p>Implementing/Developing voice overs pipelines.</p></li>
-            <li><p>Developed TOC system.</p></li>
+            <li><p>Developed the TOC system.</p></li>
 			<li><p>Developed AI conversation system.</p></li>
             <li><p>Developed a Quest System to be used for tutorials.</p></li>
 			<li><p>A few Ai behaviours (Suspects reacting to allies deaths, SWAT Disarming Traps and etc).</p></li>
